--- a/Bayesian_inference_1/1.2-Inference_frameworks.qmd
+++ b/Bayesian_inference_1/1.2-Inference_frameworks.qmd
@@ -35,77 +35,54 @@ ggplot2::theme_set(theme_cowplot())
 
 ## What is most important?
 
-**Frequentist**: Long-run expectation of existing data
+**Frequentist**: Long-run expectations of existing data
 
 **Bayesian**: Incorporating prior information into the modeling process.
 
 
 ## Methods of inference/estimation
 
-- Analytical (mean, least squares))
+- Closed form solution (mean, least squares)
 - Maximum likelihood
 - Resampling (Monte Carlo)
 - Bayesian
 
+In many cases, all will give similar answers.
 
-## Analytical solutions
+
+## Closed form solutions
 
 Mean:
 
 $$\bar{Y} = \frac{\sum_{i=1}^{n}Y_i}{n}$$
 
 
-## Least squares
+## Bivariate regression slope
 
-Slope:
+Least squares:
 
 $$b = \frac{\sum\left(X_{i}-\bar{X}\right)\left(Y_{i}-\bar{Y}\right)}{\sum\left(X_{i}-\bar{X}\right)^{2}}$$
 
+Matrix algebra:
+
+$$\hat\beta=(X^TX)^{-1}X^Ty$$
+
 
 ## Maximum likelihood
 
-For a given mean and standard deviation, how likely is my data?
+For a given set of model parameter estimates, how likely is my data?
 
-- Search for the values of mean and standard deviation that maximizes the likelihood
+- e.g., Search for the values of slope and intercept that maximizes the likelihood
 - Optimization problem
+- General solution for questions that don't have closed form solutions (e.g., generalized linear models, multilevel models, etc.)
 
 
-## Maximum likelihood
+## Resampling
 
-```{r}
-set.seed(34279)
-D <- tibble(x = rnorm(40, 47, 5))
-
-Probs <- tibble(
-  Pred = c("Mean = 45; sd = 5",
-           "Mean = 47; sd = 3",
-           "Mean = 47; sd = 6",
-           "Mean = 42; sd = 10",
-           "Mean = 40, sd = 3"),
-  Mean = c(45, 47, 47, 42, 40),
-  SD = c(5, 3, 6, 10, 2)
-) |> 
-  mutate(Pred = fct_inorder(Pred))
-
-
-Dens <- map_dfr(
-  .x = 1:nrow(Probs),
-  .f = function(ii, Probs){
-    tibble(Label = Probs$Pred[ii],
-           x = seq(30, 65, length.out = 200),
-           y = dnorm(x, mean = Probs$Mean[ii], sd = Probs$SD[ii]))
-  },
-  Probs = Probs)
-
-ggplot(D, aes(x)) +
-  geom_histogram(aes(y = after_stat(density)), bins = 30) +
-  geom_line(data = Dens,
-            aes(x, y, color = Label),
-            linewidth = 2) +
-  scale_color_brewer(type = "qual", name = NULL) +
-  labs(x = "Measure", y = "Density") +
-  theme(legend.position = c(0.7, 0.8))
-```
+- 
 
 
 ## Bayesian
+
+What distributions of model parameters are most compatible with the data, model, and priors?
+
