Fix list indexing

--- a/Bayesian_inference_1/1.4-Priors_and_posteriors.qmd
+++ b/Bayesian_inference_1/1.4-Priors_and_posteriors.qmd
@@ -347,9 +347,7 @@ P <- purrr::map(
   },
   ab = ab)
 
-wrap_plots(P[[1]], P[[2]], P[[3]], P[[4]], P[[5]],
-           P[[6]], P[[7]], P[[8]], P[[9]], P[[10]],
-           P[[11]], P[[12]], P[[13]], P[[14]], P[[15]], P[[16]])
+wrap_plots(P[1:16])
 ```
 
 
@@ -414,9 +412,7 @@ P <- purrr::map(
   },
   ab = ab)
 
-wrap_plots(P[[1]], P[[2]], P[[3]], P[[4]], P[[5]],
-           P[[6]], P[[7]], P[[8]], P[[9]], P[[10]],
-           P[[11]], P[[12]], P[[13]], P[[14]], P[[15]], P[[16]])
+wrap_plots(P[1:16])
 ```
 
 
