--- a/Bayesian_inference_1/1.3-Likelihood.qmd
+++ b/Bayesian_inference_1/1.3-Likelihood.qmd
@@ -179,7 +179,12 @@ logistic(coef(fm))
 
 ## What does this likelihood represent?
 
+### FIXME
+
 Frequentist interpretation
+
+https://lakens.github.io/statistical_inferences/confint.html#singleCI
+
 
 
 ## What have we learned so far?
